# fieldtrial

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: agent_usage.md  architecture.md  method_choice.md  methodology.md
docs/audit/: methodology_audit_2026-07.md  methodology_audit_2026-07_findings.json
examples/artifacts/: completed_test_analysis.manifest.json  completed_test_results.json  completed_test_results.json.manifest.json  completed_test_results.visuals.json  completed_test_results_scpi.json  completed_test_results_scpi.json.manifest.json  completed_test_results_scpi.visuals.json  shared_controls_plan.json  shared_controls_plan.json.manifest.json  smoke_analysis.json  smoke_analysis.json.manifest.json
examples/configs/: completed_test.yaml  interim_monitoring_completed.yaml  matched_markets_completed.yaml  portfolio_decisioning.yaml  randomized_design.yaml  registry_active_tests.csv  shared_controls_roadmap.yaml  supergeo_design.yaml
examples/data/: smoke_panel.csv  smoke_panel.parquet  synthetic_panel.parquet  synthetic_panel_completed.parquet
examples/reports/: completed_test_analysis.html  completed_test_analysis_scpi.html  shared_controls_plan.html  shared_controls_plan_calendar.html  smoke_analysis.html
examples/scripts/: check_generated_examples.py  generate_synthetic_us_panel.py  run_completed_test_analysis.py  run_shared_controls_plan.py
src/fieldtrial/: __init__.py  exceptions.py  methods.py
tests/acceptance/: test_cli_workflows.py
tests/integration/: test_analysis_workflow.py  test_planning_workflow.py
tests/method_validation/: conftest.py  test_deterministic_dgps.py  test_interval_coverage.py  test_native_estimator_recovery.py  test_null_calibration.py
tests/unit/: test_advanced_estimators.py  test_assignments.py  test_calibration.py  test_estimators.py  test_inference.py  test_method_contracts.py  test_metrics.py  (+10 more)
(+77 files in other folders)
