[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fieldtrial"
version = "0.1.0"
description = "Python-first planning and measurement for geo experiment portfolios."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "FieldTrial contributors" }]
keywords = ["experimentation", "geo", "causal-inference", "marketing", "optimization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "duckdb>=0.10",
  "jinja2>=3.1",
  "numpy>=1.26",
  "ortools>=9.9",
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["build>=1.2", "hypothesis>=6", "pytest>=8", "pytest-cov>=5", "ruff>=0.5"]
estimators = ["pyfixest>=0.28", "pysyncon>=1.5", "scpi-pkg>=2.0"]
bayes = ["causalpy>=0.4", "pymc>=5"]
# Published synthdid 0.10.1 pins numpy==1.23.5, pandas==1.5.3, and
# statsmodels==0.13.5, with scipy==1.10.1 only for Python <3.12; keep it out of
# the Python 3.12 validation environment used for this package.
advanced = ["synthdid>=0.10; python_version < '3.12'"]
polars = ["polars>=0.20"]

[project.scripts]
fieldtrial = "fieldtrial.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldtrial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
